--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<mat-toolbar color="primary"><span>Ristorante Con Fusion</span></mat-toolbar>
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
   <h1>
