--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -2,13 +2,46 @@
   fxLayout="column"
   fxLayoutGap="10px">
 
+  <div fxFlex>
+    <div>
+      <h3>Menu</h3>
+      <hr> <!-- horizontal line element -->
+    </div>
+  </div>
+
+  <div fxFlex>
+    <mat-grid-list cols="2" rowHeight="200px">
+      <mat-grid-tile *ngFor="let dish of dishes">
+        <img height="200px" src={{dish.image}} alt={{dish.name}}>
+        <mat-grid-tile-footer>
+          <h1 matLine> {{dish.name | uppercase }} </h1>
+        </mat-grid-tile-footer>
+      </mat-grid-tile>
+    </mat-grid-list>
+  </div>
+
+  <!-- not the best way of doing this -->
+  <div fxFlex *ngIf="selectedDish">
+    <mat-card>
+      <mat-card-header>
+        <mat-card-title>
+          <h3>{{ selectedDish.name | uppercase }}</h3>
+        </mat-card-title>
+      </mat-card-header>
+      <img mat-card-image src="{{selectedDish.image}}" alt="{{selectedDish.name}}">
+      <mat-card-content>
+        <p> {{ selectedDish.description }}</p>
+      </mat-card-content>
+      <mat-card-actions>
+        <button mat-button>LIKE</button>
+        <button mat-button>SHARE</button>
+      </mat-card-actions>
+    </mat-card>
+  </div>
+
+<!--
   <mat-list fxFlex>
-    <!-- component supplied by material design: allows creation of list of items, Angular Material List component -->
-    <!-- mat-list is similar to Bootstraps media object -->
-    <!-- fxFlex: means that this whole content(list in this case) will be treated as one whole unit -->
     <mat-list-item *ngFor="let dish of dishes">
-      <!-- same as <li></li> -->
-      <!-- *ngFor: structural directive supplied by Angular: Allows to iterate over an array of items. (for loop) -->
       <img matListAvatar src={{dish.image}} alt={{dish.name}}>
       <h1 matLine> {{dish.name}} </h1>
       <p matLine>
@@ -16,4 +49,5 @@
       </p>
     </mat-list-item>
   </mat-list>
+-->
 </div>
