--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -27,7 +27,7 @@
   </div>
 
   <div fxFlex="40">
-      <mat-list fxFlex>
+      <mat-list fxFlex *ngIf='dish'>
         <mat-list-item>
             <h2>Comments</h2>
         </mat-list-item>
