--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,17 +6,24 @@
 
 <p>{{ user | json }}</p>
 
-<form novalidate (ngSubmit)="onSubmit()">
+<!-- novalidate tag, turns off HTML5s built in form validation so we can implement the frameworks own form validation-->
+<form novalidate #loginForm="ngForm" (ngSubmit)="onSubmit()">
   <mat-dialog-content>
     <p>
+      <!--dividerCOor attribute directive allows us to change the color if we encounter errors-->
+      <!--dividerColor="{{ username.invalid && !username.prinstine ? 'warn' : 'primary' }}" this is not a property of mat-form-field-->
       <mat-form-field>
         <!-- [(ngModel)] directive allows 2-way data binding.-->
-        <input matInput placeholder="Username" type="text" [(ngModel)]="user.username" name="username" required>
+        <input matInput placeholder="Username" #username="ngModel" type="text" [(ngModel)]="user.username" name="username" required>
+        <!--<mat-hint><span [hidden]="username.pristine"><span [hidden]="!username.errors?.required">Username is required.</span></span></mat-hint>-->
+        <mat-error *ngIf="username.errors?.required">Username is required.</mat-error>
       </mat-form-field>
       </p>
       <p>
       <mat-form-field>
-        <input matInput placeholder="Password" type="password" [(ngModel)]="user.password" name="password" required>
+        <input matInput placeholder="Password" #password="ngModel" type="password" [(ngModel)]="user.password" name="password" required>
+        <!--<mat-hint><span [hidden]="password.pristine"><span [hidden]="!password.errors?.required">Password is required.</span></span></mat-hint>-->
+        <mat-error *ngIf="password.errors?.required">Password is required.</mat-error>
       </mat-form-field>
       </p>
       <p>
@@ -28,6 +35,6 @@
   <mat-dialog-actions>
     <span class="flex-spacer"></span>
     <button mat-button mat-dialog-close>Cancel</button>
-    <button type="submit" mat-button class="background-primary text-floral-white">Login</button>
+    <button type="submit" [disabled]="loginForm.form.invalid" mat-button class="background-primary text-floral-white">Login</button>
   </mat-dialog-actions>
 </form>
