--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -55,12 +55,12 @@
          <!-- <mat-error *ngIf="feedbackForm.get('lastname').hasError('required') && feedbackForm.get('lastname').touched">Last name is required</mat-error> -->
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="telnum" placeholder="Tel Number" type="tel" required>
+          <input matInput formControlName="telnum" placeholder="Tel Number" type="tel" pattern="[0-9]*" required>
           <mat-error *ngIf="formErrors.telnum">{{ formErrors.telnum }}</mat-error>
           <!-- <mat-error *ngIf="feedbackForm.get('telnum').hasError('required') && feedbackForm.get('telnum').touched">Tel. number is required</mat-error> -->
         </mat-form-field>
         <mat-form-field class="half-width">
-          <input matInput formControlName="email" placeholder="Email" type="email">
+          <input matInput formControlName="email" placeholder="Email" type="email" email required>
           <mat-error *ngIf="formErrors.email">{{ formErrors.email }}</mat-error>
          <!-- <mat-error *ngIf="feedbackForm.get('email').hasError('required') && feedbackForm.get('email').touched">Email ID is required</mat-error> -->
         </mat-form-field>
