Angular Rest Save

--- a/src/app/dishdetail/dishdetail.component.html
+++ b/src/app/dishdetail/dishdetail.component.html
@@ -86,8 +86,11 @@
         </div>
         </mat-list>    
   </div>
-  <div [hidden]="dish">
+  <div [hidden]="dish || errMess"> <!-- hidden if dish || errMess == null -->
     <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
   </div>
-
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
 </div>
