--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -19,10 +19,13 @@
       </mat-grid-tile>
     </mat-grid-list>
   </div>
-  <div [hidden]="dishes">
+  <div [hidden]="dishes || errMess">
     <mat-spinner></mat-spinner> <h4>Loading . . . Please Wait</h4>
   </div>
-
+  <div *ngIf="errMess">
+    <h2>Error</h2>
+    <h4>{{ errMess }}</h4>
+  </div>
   <!-- not the best way of doing this
   <div fxFlex *ngIf="selectedDish">
     <mat-card>
