--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,3 +45,10 @@ body {
     display:flex;
 }
 
+.highlight {
+    background-color: $background-pale;
+    border: 1px solid $primary-color-dark;
+    z-index: 1; // elevate above 
+    transform: scale(1.01); //slightly raise
+}
+
