--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -9,7 +9,7 @@
     </div>
   </div>
 
-  <div fxFlex *ngIf="dishes"> <!-- show this div only when dishes is defined. -->
+  <div fxFlex *ngIf="dishes" [@expand]> <!-- show this div only when dishes is defined. -->
     <mat-grid-list cols="2" rowHeight="200px">
       <mat-grid-tile *ngFor="let dish of dishes" [routerLink]="['/dishdetail',dish.id]" appHighlight>
         <img height="200px" src="{{BaseURL + dish.image}}" alt={{dish.name}}>
